--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,18 @@ You can install the development version of MPTevol from [GitHub](https://github.
 devtools::install_github("qingjian1991/MPTevol")
 ```
 
+## Authors
+
+This software is developed by:
+
+* Qingjian Chen, chenqingjian2010@163.com, Sun Yat-Sen Univerity Cancer Center.
+* Shixiang Wang, w_shixiang@163.com, Sun Yat-Sen Univerity Cancer Center.
+
+## Supervised by 
+
+* [Qi Zhao](zhaoqi@sysucc.org.cn) from Bioinformatic Center of Sun Yat-sen University Cancer Center 
+
+
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
