--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,17 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of MPTevol is to ...
+The goal of MPTevol is to provide a practical computation framework for dissecting the
+evolution of multiple primary tumors (MPT), reducing analysis
+complexity with modular design.
+
+**Package Overview**:
+
+![](man/figures/MPTevol.jpg)
+
+If you are using the MPTevol in academic research, please cite our paper:
+
+***Deciphering clonal dynamics and metastatic routines in a rare patient of synchronous triple primary tumors and multiple metastases with MPTevol.***
 
 ## Installation
 
@@ -29,8 +39,9 @@ You can install the development version of MPTevol from [GitHub](https://github.
 remotes::install_github("qingjian1991/MPTevol")
 ```
 
-Requirements:
+## Package structure
 
+![](man/figures/MPTevol_Structure.jpg)
 
 ## Example
 
@@ -40,12 +51,11 @@ Please see vignette for detail usage of MPTevol.
 
 This software is developed by:
 
-* Qingjian Chen, chenqingjian2010@163.com, Sun Yat-Sen Univerity Cancer Center.
-* Shixiang Wang, w_shixiang@163.com, Sun Yat-Sen Univerity Cancer Center.
+* Qingjian Chen, <chenqingjian2010@163.com>, Sun Yat-Sen Univerity Cancer Center.
+* Shixiang Wang, <w_shixiang@163.com>, Sun Yat-Sen Univerity Cancer Center.
 
 ## Supervised by 
 
-* [Qi Zhao](zhaoqi@sysucc.org.cn) from Bioinformatic Center of Sun Yat-sen University Cancer Center 
-
+* [Qi Zhao](zhaoqi@sysucc.org.cn) from Bioinformatic Center of Sun Yat-sen University Cancer Center.
 
 
